--- a/index.html
+++ b/index.html
@@ -35,21 +35,25 @@
     <section class="box left-box-supervisor">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
+      <img src="./images/icon-supervisor.svg" alt="icon magnifying glass with eye">
     </section>
 
     <section class="box middle-top-box-teamBuilder">
       <h3>Team Builder</h3>
       <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="./images/icon-team-builder.svg" alt="icon ui-window with house">
     </section>
 
     <section class="box middle-bottom-box-karma">
       <h3>Karma</h3>
       <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="./images/icon-karma.svg" alt="icon lightbulb">
     </section>
 
     <section class="box right-box-calculator">
       <h3>Calculator</h3>
       <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="./images/icon-calculator.svg" alt="icon monitor">
     </section>
   </main>
 
